--- a/FE/EEBook/package.json
+++ b/FE/EEBook/package.json
@@ -30,6 +30,7 @@
     "primeflex": "^3.3.0",
     "primeng": "^15.2.0",
     "rxjs": "~7.5.0",
+    "swiper": "^11.0.7",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
   },
